# Bible-App

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  SETUP_INSTRUCTIONS.md  app.json  package-lock.json  package.json  pubspec.yaml
Dataset/: bible_spiritual_assistant_panic_button_dataset.jsonl
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp  llama_engine.cpp
assets/data/: emotion_verses.json
assets/models/: README.md
assets/panic/: panic_responses.jsonl
bible_app/: .gitignore  README.md  pubspec.yaml
bible_app/android/app/: build.gradle.kts
bible_app/assets/bible/: amp.json  kjv.json  niv.json  nlt.json
bible_app/assets/models/: README.md
bible_app/docs/: architecture.md
bible_app/ios/Runner.xcodeproj/: project.pbxproj
bible_app/lib/: main.dart
bible_app/lib/ai/: gemma_model_service.dart  prompt_builder.dart
bible_app/lib/core/: service_locator.dart
docs/: datasets.md
ios/Runner/: llama_engine.mm
lib/: main.dart
lib/ai/: bible_api_service.dart  emotion_detection_service.dart  emotion_verses_repository.dart  fallback_bible_service.dart  gemma_model_service.dart  gemma_prompt_builder.dart  journal_reflection_service.dart  spiritual_guidance_service.dart  verse_cache_service.dart
lib/ai/inference/: gemma_engine.dart  gemma_ffi.dart
lib/ai/prompt_builders/: gemma_prompt_builder.dart
lib/ai/services/: bible_api_service.dart  emotion_verses_repository.dart  fallback_bible_service.dart  gemma_model_service.dart  journal_reflection_service.dart  spiritual_guidance_service.dart  verse_cache_service.dart
lib/core/: service_locator.dart
lib/core/services/: local_bible_service.dart  service_locator.dart
lib/data/datasources/: panic_search_service.dart
lib/data/models/: bible_verse.dart  favorite_verse.dart  panic_entry.dart  panic_response.dart
lib/data/repositories/: bible_repository.dart  panic_response_repository.dart
lib/data/services/: favorites_service.dart  panic_dataset_service.dart  panic_search_service.dart
lib/features/journal/: journal_placeholder_screen.dart
lib/features/panic/: panic_history_screen.dart  panic_screen.dart
lib/routes/: app_router.dart
macos/Runner.xcodeproj/: project.pbxproj
native/: llama_bridge.cpp
scripts/dataset_tools/: README.md
scripts/model_setup/: README.md
src/api/: aiApi.js  bibleApi.js
src/components/: ChatMessage.js  VerseCard.js
src/navigation/: AppNavigator.js
src/screens/: BibleReader.js  Chatbot.js  HomeScreen.js  VerseInsight.js  VerseScreen.js
test/: widget_test.dart
(+90 files in other folders)
